--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -101,6 +101,10 @@
     "sstream": "cpp",
     "stdexcept": "cpp",
     "streambuf": "cpp",
-    "typeinfo": "cpp"
+    "typeinfo": "cpp",
+    "cstring": "cpp",
+    "map": "cpp",
+    "unordered_set": "cpp",
+    "cinttypes": "cpp"
   }
 }
