--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -105,6 +105,8 @@
     "cstring": "cpp",
     "map": "cpp",
     "unordered_set": "cpp",
-    "cinttypes": "cpp"
+    "cinttypes": "cpp",
+    "ctime": "cpp",
+    "iomanip": "cpp"
   }
 }
